# celadon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  zene_optimization_proposals.md
.github/workflows/: fly-deploy.yml
docs/: DEPLOYMENT.md  README_clarify.md  development-process.md
migrations/: 001_init.sql  002_token_expiry.sql  003_waiting_list.sql  004_system_settings.sql  005_granular_model_settings.sql  006_align_zene_config.sql
src/: api.rs  auth.rs  cli.rs  clients.rs  common.rs  db.rs  main.rs  models.rs  service.rs  utils.rs
tests/: .env.test  test.mjs  test.py  test.rs  test.ts  test_deepseek.js  test_mock_args.rs  test_mock_stream.rs  test_stream.rs  test_zhipu.rs
tests/scripts/: verify_key.js  verify_moonshot.js  verify_zhipu.js  verify_zhipu_global.js
web/: fly.toml  index.html  nohup.out  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.out
web/functions/api/: waiting-list.ts
web/src/: App.tsx  index.css
web/src/components/: ClarifyChat.tsx  IdeaInput.tsx  PipelineStages.tsx  ProjectCard.tsx  RequireAuth.tsx  StageDetail.tsx
web/src/contexts/: AuthContext.tsx  LocaleContext.tsx
web/src/lib/: api.ts  generatePrd.ts  i18n.ts  providers.ts
web/src/pages/: AdminSettingsPage.tsx  ClarifyPage.tsx  DeployPage.tsx  DevPage.tsx  Index.tsx  IteratePage.tsx  LoginPage.tsx  NotFound.tsx  PrdPage.tsx  RegisterPage.tsx
