[package]
name = "celadon"
version = "0.1.2"
edition = "2024"
description = "Celadon is an interactive AI agent that guides users from initial ideas to project development, including refining names, generating docs, simulating builds, and deploying, with support for ongoing iterations and updates."
license = "MIT"
repository = "https://github.com/lipish/celadon"
default-run = "celadon"

[[bin]]
name = "celadon"
path = "src/main.rs"

[[bin]]
name = "test_stream"
path = "test_stream.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.8", features = ["v4"] }
llm-connector = "0.6"
# 默认不含 fastembed；需本地 embedding 时编译加 --features knowledge
zene = "0.5.4"
# PostgreSQL + 用户系统
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
bcrypt = "0.16"
futures = "0.3.32"
async-stream = "0.3.6"
tokio-stream = "0.1.18"
futures-core = "0.3.32"
